force-app/main/default/objects/Asset_Category__c/Asset_Category__c.object-meta.xml
<CustomObject>
    <label>Asset Category</label>
    <nameField>
        <label>Asset Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>