force-app/main/default/objects/Asset_Category__c/fields/Category_Hierarchy_Path__c.field-meta.xml
<CustomField>
    <fullName>Category_Hierarchy_Path__c</fullName>
    <formula>Name + 
IF(ISBLANK(Parent_Category__r.Name), "", " ➡️ " + Parent_Category__r.Name) +
IF(ISBLANK(Parent_Category__r.Parent_Category__r.Name), "", " ➡️ " + Parent_Category__r.Parent_Category__r.Name) +
IF(ISBLANK(Parent_Category__r.Parent_Category__r.Parent_Category__r.Name), "", " ➡️ " + Parent_Category__r.Parent_Category__r.Parent_Category__r.Name) +
IF(ISBLANK(Parent_Category__r.Parent_Category__r.Parent_Category__r.Parent_Category__r.Name), "", " ➡️ " + Parent_Category__r.Parent_Category__r.Parent_Category__r.Parent_Category__r.Name) +
IF(ISBLANK(Parent_Category__r.Parent_Category__r.Parent_Category__r.Parent_Category__r.Parent_Category__r.Name), "", " ➡️ " + Parent_Category__r.Parent_Category__r.Parent_Category__r.Parent_Category__r.Parent_Category__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category Hierarchy Path</label>
    <type>Text</type>
</CustomField>