force-app/main/default/objects/Asset_Category__c/fields/Parent_Category__c.field-meta.xml
<CustomField>
    <fullName>Parent_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Category</label>
    <referenceTo>Asset_Category__c</referenceTo>
    <relationshipLabel>Child Categories</relationshipLabel>
    <relationshipName>Child_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>