force-app/main/default/objects/Asset_Category__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Parent_Category__c</columns>
    <columns>Category_Hierarchy_Path__c</columns>
    <columns>Description__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Asset Categories</label>
</ListView>